3974.	[bug]		handle DH_compute_key() failure correctly in
			openssldh_link.c. [RT #37477]

3973.	[func]		Added hooks for Google/Great Performance Tools
			CPU Profiler, including in real time. [RT #37339]

3972.	[bug]		Fix host's usage statement. [RT #37397]

3971.	[bug]		Reduce the cascasding failures due to a bad $TTL line
			in named-checkconf / named-checkzone. [RT #37138]

3970.   [contrib]       Fixed a use after free bug in the SDB LDAP driver.
			[RT #37237]

3969.	[test]		Added 'delv' system test. [RT #36901]

3968.	[bug]		Silence spurious log messages when using 'named -[46]'.
			[RT #37308]

3967.	[test]		Add test for inlined signed zone in multiple views
			with different DNSKEY sets. [RT #35759]

3966.	[bug]		Missing dns_db_closeversion call in receive_secure_db.
			[RT #35746]

3965.	[func]		Log outgoing packets and improve packet logging to
			support logging the remote address. [RT #36624]

3964.	[func]		nsupdate now performs check-names processing.
			[RT #36266]

3963.	[test]		Added NXRRSET test cases to the "dlzexternal"
			system test. [RT #37344]

3962.	[bug]		'dig +topdown +trace +sigchase' address unhandled error
			conditions. [RT #34663]

3961.	[bug]		Forwarding of SIG(0) signed UPDATE messages failed with
			BADSIG.  [RT #37216]

3960.	[bug]		'dig +sigchase' could loop forever. [RT #37220]

3959.	[bug]		Updates could be lost if they arrived immediately
			after a rndc thaw. [RT #37233]

3958.	[bug]		Detect when writeable files have multiple references
			in named.conf. [RT #37172]

3957.	[bug]		"dnssec-keygen -S" failed for ECCGOST, ECDSAP256SHA256
			and ECDSAP384SHA384. [RT #37183]

3956.	[func]		Notify messages are now rate limited by notify-rate and
			startup-notify-rate instead of serial-query-rate.
			[RT #24454]

3955.	[bug]		Notify messages due to changes are no longer queued
			behind startup notify messages. [RT #24454]

3954.	[bug]		Unchecked mutex init in dlz_dlopen_driver.c [RT #37112]
